# picocomp

./: CMakeLists.txt  README.md  build.sh  connections.h  convert.sh  cvideo.c  cvideo.h  hid_app.c  keymap2.h  main.c  ps2keys.h
cpu-z80/: Z80.c
fs/: fat32.c  fat32.h  testfat32.c
galaksija/: Makefile  charrom.h  galaksija.c  galkeys.h  hardware.h  hwpc.c  hwpico.c  hyperload.h  machine.h  mkfs.c  mkrom.sh  pc.c  pc.h  rom.h  runz80.c  screen.c  screen.h
galaksija/catalog/: formula1.h  galakrat.h  hardware.h  jjack.h  mminer.h
inc/: gasciikeys.h  hardware.h  keymap.h  machine.h  menu.h
linux/: Makefile  hwpc.c
menu/: menu.c
pico/: CMakeLists.txt  audio.pio  build.sh  cvideo.h  hwpico.c
usb/: hid_app.c  tusb_config.h
